--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "webpack --config webpack.config.js",
     "scss": "node-sass src/sass/main.scss  style.css -w",
     "woo:scss": "node-sass src/sass/woocommerce.scss  css/woocommerce.css -w",
+    "compile:sass": "node-sass src/sass/main.scss style.comp.css",
+    "concat:css": "concat -o style.concat.css style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' style.concat.css -o style.prefix.css",
+    "compress:css": "node-sass style.prefix.css style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
